--- a/_includes/partials/about.njk
+++ b/_includes/partials/about.njk
@@ -1,6 +1,6 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20" data-scroll>
+<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full" data-scroll>
 	<div class="w-full min-h-full wrapper-x wrapper-y">
-		<h1 class="mb-16 md:mb-20 xl:mb-24 scroll-flash" data-scroll>{{ section.data.title }}</h1>
+		<h1 class="mb-16 md:mb-20 scroll-flash" data-scroll>{{ section.data.title }}</h1>
 		<div class="max-w-4xl -mx-5 overflow-hidden border-t-4 rounded-lg shadow sm:mx-auto border-sun-500 scroll-up" data-scroll>
 			<div class="copy copy--extra">
 				{{ section.templateContent | safe }}
