--- a/_includes/partials/challenges.njk
+++ b/_includes/partials/challenges.njk
@@ -1,7 +1,7 @@
 {% set challenges = section.data.challenges %}
-<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20" data-scroll>
+<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full" data-scroll>
 	<div class="w-full min-h-full wrapper-x wrapper-y">
-		<h1 class="mb-16 md:mb-20 xl:mb-24 scroll-flash" data-scroll>{{ section.data.title }}</h1>
+		<h1 class="mb-16 md:mb-20 scroll-flash" data-scroll>{{ section.data.title }}</h1>
 		<div class="relative scroll-up" x-data="{ current: 1 }" data-scroll>
 
 			<!-- Slides -->
