--- a/content/css/tailwind.css
+++ b/content/css/tailwind.css
@@ -63,6 +63,9 @@ section {
 .copy ol {
 	@apply list-decimal;
 }
+.copy ul:not(:last-child), .copy ol:not(:last-child) {
+	@apply mb-4;
+}
 .copy li:not(:last-child) {
 	@apply mb-1;
 }
