--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -42,7 +42,7 @@
 		{% endif %}
 	</head>
 
-	<body	class="flex flex-col h-full leading-7 text-mono-700 font-body bg-mono-50 lg:text-lg lg:leading-8"
+	<body	class="flex flex-col h-full leading-7 text-mono-700 font-body bg-white lg:text-lg lg:leading-8"
 			x-data="{
 				menu: false,
 			}" 
