--- a/_includes/partials/about.njk
+++ b/_includes/partials/about.njk
@@ -2,7 +2,7 @@
 	<div class="w-full min-h-full wrapper-x wrapper-y">
 		<h1 class="mb-16 md:mb-20 scroll-flash" data-scroll>{{ section.data.title }}</h1>
 		<div class="max-w-4xl -mx-5 overflow-hidden border-t-4 rounded-lg shadow sm:mx-auto border-sun-500 scroll-up" data-scroll>
-			<div class="copy copy--extra">
+			<div class="copy copy--extra bg-mono-50">
 				{{ section.templateContent | safe }}
 				<div class="flex items-center justify-end mt-10">
 					<div class="text-right">
