--- a/_includes/partials/challenges.njk
+++ b/_includes/partials/challenges.njk
@@ -1,52 +1,22 @@
 {% set challenges = section.data.challenges %}
-<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full" data-scroll>
+<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full bg-mono-50" data-scroll>
 	<div class="w-full min-h-full wrapper-x wrapper-y">
 		<h1 class="mb-16 md:mb-20 scroll-flash" data-scroll>{{ section.data.title }}</h1>
-		<div class="relative scroll-up" x-data="{ current: 1 }" data-scroll>
+		<div class="scroll-up" data-scroll>
 
-			<!-- Slides -->
-			<ul class="flex justify-center sm:flex-wrap sm:justify-around sm:max-w-none">
+			<ul class="grid sm:grid-cols-2 gap-8">
 				{% for challenge in challenges %}
-					<li class="m-5 overflow-hidden rounded-lg shadow w-240 sm:block" :class="{ 'hidden': current !== {{ loop.index }} }">
-						<div class="relative bg-gray-100 pb-5/3 darken">
-							<img src="{{ challenge.image }}" alt="{{ challenge.question }}" class="absolute object-cover w-full h-full" loading="lazy">
-							<span class="absolute bottom-0 z-10 p-5 text-center text-white">{{ challenge.question }}</span>
+					<li class="">
+						<div class="max-w-600 mx-auto">
+							<div class="relative overflow-hidden rounded-lg shadow bg-gray-100 pb-16/9 darken">
+								<img src="{{ challenge.image }}" alt="{{ challenge.question }}" class="absolute object-cover w-full h-full" loading="lazy">
+								<span class="absolute inset-x-0 bottom-0 z-10 p-5 text-center text-white leading-7">{{ challenge.question }}</span>
+							</div>
 						</div>
 					</li>
 				{% endfor %}
 			</ul>
-			
-			<!-- Arrows -->
-			<div class="absolute inset-0 flex items-center justify-between sm:hidden">
-				<button 
-				class="flex items-center justify-center w-12 h-12 -ml-6 transform rotate-90 rounded-full bg-sun-500 text-sun-900 hover:bg-sun-600"
-				x-on:click="current = current === 1 ? {{ challenges.length }} : current - 1"
-				aria-label="Previous">
-				{{ "/_includes/assets/img/chevron-down.svg" | svgContents() | safe }}
-				</button>
 
-				<button 
-				class="flex items-center justify-center w-12 h-12 -mr-6 transform -rotate-90 rounded-full bg-sun-500 text-sun-900 hover:bg-sun-600"
-				x-on:click="current = current === {{ challenges.length }} ? 1 : current + 1"
-				aria-label="Next">
-				{{ "/_includes/assets/img/chevron-down.svg" | svgContents() | safe }}
-				</button>   
-			</div>
-
-			<!-- Indicators -->
-			<div class="relative flex items-center justify-center mt-4 sm:hidden">
-				{% for challenge in challenges %}
-					<button
-					class="w-4 h-4 mx-2 transition-colors duration-200 ease-out rounded-full hover:bg-mono-200 hover:shadow-lg"
-					:class="{ 
-						'bg-mono-200': current === {{ loop.index }},
-						'bg-mono-100': current !== {{ loop.index }} 
-					}" 
-					x-on:click="current = {{ loop.index }}"
-					aria-label="Slide {{ loop.index }}"
-					></button>
-				{% endfor %}
-			</div>
 		</div>
 	</div>
 </section>
