--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,9 +1,10 @@
 <footer class="flex">
 	<div class="w-full py-5 text-right wrapper-x md:py-6 xl:py-8">
 		<div class="text-sm md:text-base xl:text-lg text-mono-300">
-			<span class=""><a href="/privacy-policy">Privacy policy</a></span>
-			<span class="mx-5">·</span>
-			<span class="">Made by <a href="http://remiduval.com">Remi Duval</a></span>
+			{% for item in settings.footer %}
+				<span>{{ item.item | markdownToHtml | safe }}</span>
+				{% if not loop.last %}<span class="mx-5">·</span>{% endif %}
+			{% endfor %}
 		</div>
 	</div>
 
