--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,7 +17,7 @@
 
 		<link rel="dns-prefetch" href="https://identity.netlify.com">
 		<link rel="stylesheet" href="/assets/css/style.css?v={% version %}"/>
-		<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
