--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,41 +1,42 @@
 <header class="fixed top-0 z-20 mt-5 ml-5 xl:text-lg xl:flex xl:m-0 xl:inset-x-0 xl:shadow xl:bg-sun-500">
+	{% if page.fileSlug == 'home' %}
+		<button class="block focus:outline-none text-sun-800 xl:hidden" @click="menu = !menu" aria-label="Menu">
+			<span x-show="!menu">{{ "/_includes/assets/img/hamburger.svg" | svgContents("w-12") | safe }}</span>
+			<span x-show="menu">{{ "/_includes/assets/img/cross.svg" | svgContents("w-12") | safe }}</span>
+		</button>
 
-	<button class="block focus:outline-none text-sun-800 xl:hidden" @click="menu = !menu" aria-label="Menu">
-		<span x-show="!menu">{{ "/_includes/assets/img/hamburger.svg" | svgContents("w-12") | safe }}</span>
-		<span x-show="menu">{{ "/_includes/assets/img/cross.svg" | svgContents("w-12") | safe }}</span>
-	</button>
+		{# Menu mobile #}
+		<div class="overflow-hidden bg-white rounded-lg shadow-2xl xl:hidden font-display"
+			@click.away="menu = false"
+			x-cloak
+			x-show="menu"
+			x-transition:enter="transition-all ease-in duration-300"
+			x-transition:enter-start="opacity-0 transform translate-y-2"
+			x-transition:enter-end="opacity-100 transform translate-y-0"
+			x-transition:leave="transition ease-in duration-300"
+			x-transition:leave-end="opacity-0 transform translate-y-3"
+		>
+			<nav class="">
+				<ul class="py-4">
+					{% set sectionslist = collections.section %}
+					{% for section in sectionslist %}
+						{% if not loop.first %}
+							<li class=""><a href="{{ "/" if page.fileSlug != 'home' }}#{{ section.data.page.fileSlug }}" class="flex items-center px-8 py-4 text-mono-700 hover:bg-mono-50" @click="menu = false">{{ section.data.label }}</a></li>
+						{% endif %}
+					{% endfor %}
+				</ul>
+			</nav>
 
-	{# Menu mobile #}
-	<div class="overflow-hidden bg-white rounded-lg shadow-2xl xl:hidden font-display"
-		@click.away="menu = false"
-		x-cloak
-		x-show="menu"
-		x-transition:enter="transition-all ease-in duration-300"
-		x-transition:enter-start="opacity-0 transform translate-y-2"
-		x-transition:enter-end="opacity-100 transform translate-y-0"
-		x-transition:leave="transition ease-in duration-300"
-		x-transition:leave-end="opacity-0 transform translate-y-3"
-	>
-		<nav class="">
-			<ul class="py-4">
-				{% set sectionslist = collections.section %}
-				{% for section in sectionslist %}
-					{% if not loop.first %}
-						<li class=""><a href="{{ "/" if page.fileSlug != 'home' }}#{{ section.data.page.fileSlug }}" class="flex items-center px-8 py-4 text-mono-700 hover:bg-mono-50" @click="menu = false">{{ section.data.label }}</a></li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-		</nav>
-
-		<div class="px-8 py-4 bg-mono-50">
-			<ul class="flex">
-				{% for social in settings.socials %}
-					{% set icon = "/_includes/assets/img/socials/" + social.name + ".svg" %}
-					<li class="{% if not loop.first %} ml-3 {% endif %}"><a href="{{ social.url }}" @click="menu = false">{{ icon | svgContents('text-mono-500 w-10 hover:text-mono-600') | safe }}</a></li>
-				{% endfor %}
-			</ul>
+			<div class="px-8 py-4 bg-mono-50">
+				<ul class="flex">
+					{% for social in settings.socials %}
+						{% set icon = "/_includes/assets/img/socials/" + social.name + ".svg" %}
+						<li class="{% if not loop.first %} ml-3 {% endif %}"><a href="{{ social.url }}" @click="menu = false">{{ icon | svgContents('text-mono-500 w-10 hover:text-mono-600') | safe }}</a></li>
+					{% endfor %}
+				</ul>
+			</div>
 		</div>
-	</div>
+	{% endif %}
 
 	{# Menu desktop #}
 	<div class="items-center justify-between hidden w-full xl:flex wrapper-x">
